// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> component renders a dropdown with default value 1`] = `
.emotion-0 {
  margin: 0;
  display: inline-block;
  position: relative;
  width: 100%;
}

.emotion-2 {
  background: #FFFFFF;
  border: 0;
  border-radius: 3px;
  padding: 8px 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  text-align: left;
  width: 100%;
  height: 53px;
  cursor: pointer;
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: #FAFAFA;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-8 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: currentColor;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="dropdown"
    role="menu"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="dropdown-select"
    >
      <div
        style="overflow: hidden;"
      >
        <p
          class="emotion-4 emotion-5"
          color="content.default"
          data-testid="typography"
        >
          Label
        </p>
        <p
          class="emotion-6 emotion-5"
          color="content.default"
          data-testid="typography"
          style="text-overflow: ellipsis; overflow: hidden;"
        >
          Option 2
        </p>
      </div>
      <i
        class="emotion-8 emotion-9"
        color="currentColor"
        data-testid="icon"
      >
        expand_more
      </i>
    </button>
  </div>
</div>
`;

exports[`<Dropdown /> component renders a dropdown without border 1`] = `
.emotion-0 {
  margin: 0;
  display: inline-block;
  position: relative;
  width: 100%;
}

.emotion-2 {
  background: #FFFFFF;
  border: 0;
  border-radius: 3px;
  padding: 8px 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  text-align: left;
  width: 100%;
  height: 53px;
  cursor: pointer;
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: #FAFAFA;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-8 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: currentColor;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="dropdown"
    role="menu"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="dropdown-select"
    >
      <div
        style="overflow: hidden;"
      >
        <p
          class="emotion-4 emotion-5"
          color="content.default"
          data-testid="typography"
        >
          Label
        </p>
        <p
          class="emotion-6 emotion-5"
          color="content.default"
          data-testid="typography"
          style="text-overflow: ellipsis; overflow: hidden;"
        >
          Select an option
        </p>
      </div>
      <i
        class="emotion-8 emotion-9"
        color="currentColor"
        data-testid="icon"
      >
        expand_more
      </i>
    </button>
  </div>
</div>
`;

exports[`<Dropdown /> component renders dropdown menu correctly 1`] = `
.emotion-0 {
  margin: 0;
  display: inline-block;
  position: relative;
  width: 100%;
}

.emotion-2 {
  background: #FFFFFF;
  border: 1px solid #DEDEDE;
  border-radius: 3px;
  padding: 8px 16px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  text-align: left;
  width: 100%;
  height: 53px;
  cursor: pointer;
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: #FAFAFA;
}

.emotion-4 {
  font-weight: 400;
  font-size: 12px;
  line-height: 16.08px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-6 {
  font-weight: 400;
  font-size: 16px;
  line-height: 21.44px;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
}

.emotion-8 {
  font-family: DTUI-icons-outlined;
  font-weight: normal;
  font-style: normal;
  font-size: 16px;
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  font-variation-settings: 'FILL' 0;
  color: currentColor;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
  -moz-osx-font-smoothing: grayscale;
  font-feature-settings: 'liga';
}

.emotion-10 {
  background: #FFFFFF;
  border: 1px solid #DEDEDE;
  border-radius: 0px;
  width: 100%;
  padding: 8px 0;
  margin: 2px 0;
  position: absolute;
  right: 0;
  z-index: 3;
  max-height: 180px;
  overflow: auto;
}

.emotion-12 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.25rem;
  letter-spacing: normal;
  margin: 0;
  text-transform: none;
  color: #454545;
  list-style: none;
  padding: 8px 16px;
  text-overflow: ellipsis;
  overflow-x: hidden;
}

.emotion-12:hover {
  background: #CCE3EB;
  cursor: pointer;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 15px;
  margin-top: 4px;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="dropdown"
    role="menu"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="dropdown-select"
    >
      <div
        style="overflow: hidden;"
      >
        <p
          class="emotion-4 emotion-5"
          color="content.default"
          data-testid="typography"
        >
          Label
        </p>
        <p
          class="emotion-6 emotion-5"
          color="content.default"
          data-testid="typography"
          style="text-overflow: ellipsis; overflow: hidden;"
        >
          Select an option
        </p>
      </div>
      <i
        class="emotion-8 emotion-9"
        color="currentColor"
        data-testid="icon"
      >
        expand_less
      </i>
    </button>
    <ul
      class="emotion-10 emotion-11"
      data-testid="dropdown-select-menu"
    >
      <li
        class="emotion-12 emotion-13"
        data-testid="dropdown-option-1"
        role="option"
      >
        Option 1
      </li>
      <li
        class="emotion-12 emotion-13"
        data-testid="dropdown-option-2"
        role="option"
      >
        Option 2
      </li>
    </ul>
    <div
      class="emotion-16 emotion-17"
      data-testid="dropdown-text"
    >
      A short message.
    </div>
  </div>
</div>
`;
